[package]
name = "lbp-price-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
terra-rust-api = "1.1.8"
anyhow = "1.0.52"
serde_json = "1.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-std = { version = "0.16.0" }
