[package]
name = "lbp-price-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.19"
anyhow = "1.0.52"
cosmwasm-std = { version = "0.16.0" }
mysql = "22.0.0"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0"
terra-rust-api = "1.1.8"
